@@ -1548,8 +1548,8 @@ Päivitä PulseAudioon.</translation>
     </message>
     <message>
         <location filename="../../src/onmainwindow.cpp" line="61"/>
-        <source>Starting X2Go Client...</source>
-        <translation>X2Go-yhteysohjelma käynnistyy...</translation>
+        <source>Starting X2Go Client %1...</source>
+        <translation>X2Go-yhteysohjelma %1 käynnistyy...</translation>
     </message>
     <message>
         <location filename="../../src/onmainwindow.cpp" line="286"/>
