@@ -1546,8 +1546,8 @@ A.u.b upgraden naar PulseAudio.</translation>
     </message>
     <message>
         <location filename="../../src/onmainwindow.cpp" line="61"/>
-        <source>Starting X2Go Client...</source>
-        <translation>X2Go Client wordt gestart...</translation>
+        <source>Starting X2Go Client %1...</source>
+        <translation>X2Go Client %1 wordt gestart...</translation>
     </message>
     <message>
         <location filename="../../src/onmainwindow.cpp" line="286"/>
