@@ -2814,7 +2814,7 @@ Please check your settings</source>
     </message>
     <message>
         <location filename="../../src/onmainwindow.cpp" line="61"/>
-        <source>Starting X2Go Client...</source>
+        <source>Starting X2Go Client %1...</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
