@@ -1559,8 +1559,8 @@ Var vänlig uppgradera till PulseAudio.</translation>
     </message>
     <message>
         <location filename="../../src/onmainwindow.cpp" line="61"/>
-        <source>Starting X2Go Client...</source>
-        <translation>Startar X2Go-klient...</translation>
+        <source>Starting X2Go Client %1...</source>
+        <translation>Startar X2Go-klient %1...</translation>
     </message>
     <message>
         <location filename="../../src/onmainwindow.cpp" line="286"/>
