@@ -2320,7 +2320,7 @@ Please update to a newer x2goserver package</source>
     </message>
     <message>
         <location filename="../../src/onmainwindow.cpp" line="61"/>
-        <source>Starting X2Go Client...</source>
+        <source>Starting X2Go Client %1...</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
