@@ -25,6 +25,8 @@ x2goclient (4.1.1.1-0x2go1) UNRELEASED; urgency=medium
       users a way to enter passwords, in case the auto-login failed.
     - src/onmainwindow.cpp: finally include version information in debug
       output.
+    - res/i18n/x2goclient_*.ts: apply last change to translation files
+      directly.
 
   [ Oleksandr Shneyder ]
   * Change echo mode for user input in InteractionDialog.
